tests/compilation_failure_tests/non_enum/union_empty.stderr
error: Union Union is not an enum, EnumRotate can only be derived for enums
 --> tests/compilation_failure_tests/non_enum/union_empty.rs:4:1
  |
4 | union Union {}
  | ^^^^^^^^^^^^^^

error: unions cannot have zero fields
 --> tests/compilation_failure_tests/non_enum/union_empty.rs:4:1
  |
4 | union Union {}
  | ^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/non_enum/union_empty.rs:4:15
  |
4 | union Union {}
  |               ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/non_enum/union_empty.rs`
