tests/compilation_failure_tests/non_enum/union_empty.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
union Union {}
